--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,7 +42,7 @@ jobs:
         pytest
     - name: Deploy Heroku
       env: 
-        HEROKU_API_TOKEN: ${{secrets.HEROKU_API_TOKEN}}
+        HEROKU_API_TOKEN: 03b6fad3-a73b-41dc-b6af-92bfd9530331
       if: github.ref == 'refs/heads/main' && job.status == 'success'
       run: | 
         git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/stormy-peak-48611.git
