--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,6 +45,6 @@ jobs:
         HEROKU_API_TOKEN: 03b6fad3-a73b-41dc-b6af-92bfd9530331
       if: github.ref == 'refs/heads/main' && job.status == 'success'
       run: | 
-        git remote add heroku https://git.heroku.com/stormy-peak-48611.git
+        git remote add heroku https://nameless-eyrie-98776-4ff88e89fda5.herokuapp.com/
         git push heroku HEAD:main -f
 
